# FrostCore

./: CMakeLists.txt
FrostCore2/: FrostCore.svnprops  README.txt
FrostCore2/cmake/: FindMySQL.cmake
FrostCore2/include/: BoostFix.h
FrostCore2/include/mysql/: mysql.h
FrostCore2/source/authserver/: CMakeLists.txt  config.h  main.cpp
FrostCore2/source/boost/: CMakeLists.txt
FrostCore2/source/global/: CMakeLists.txt
FrostCore2/source/global/AuthServer/: AuthSession.cpp
FrostCore2/source/global/Common/: ByteBuffer.h  Types.h
FrostCore2/source/global/Cryptography/: BigNumber.cpp  BigNumber.h  Sha1.cpp  Sha1.h
FrostCore2/source/global/Database/: CharacterDatabase.cpp  Fields.h  LogonDatabase.cpp  LogonDatabase.h  WorldDatabase.h
FrostCore2/source/global/Packets/: Packet.h
FrostCore2/source/global/Spells/: Spell.cpp  SpellConsts.h
source/: CMakeLists.txt
source/global/AuthServer/: AuthDefines.h  AuthServer.cpp  AuthServer.h  AuthSession.h
source/global/Database/: CharacterDatabase.h  DatabaseSystem.cpp  DatabaseSystem.h  WorldDatabase.cpp
source/global/Packets/: Packet.cpp
source/global/Spells/: Spell.h
